@@ -1,18 +1,20 @@
 package com.example.demo;
 
-import com.example.demo.domain.appUser.User;
-import com.example.demo.domain.appUser.UserService;
+import com.example.demo.domain.user.User;
+import com.example.demo.domain.user.UserService;
 import com.example.demo.domain.authority.Authority;
 import com.example.demo.domain.authority.AuthorityRepository;
 import com.example.demo.domain.role.Role;
 import com.example.demo.domain.role.RoleRepository;
-import com.example.demo.domain.userProfile.UserProfile;
-import com.example.demo.domain.userProfile.UserProfileService;
+import com.example.demo.domain.userprofile.UserProfile;
+import com.example.demo.domain.userprofile.UserProfileService;
 import lombok.RequiredArgsConstructor;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
@@ -36,46 +38,48 @@ class AppStartupRunner implements ApplicationRunner {
 //        e.g. to add a user or role to the DB (only for testing)
 
 //        Authorities (CRUD)
-        Authority add_auth = new Authority(null, "CREATE");
-        authorityRepository.save(add_auth);
+        Authority addAuth = new Authority(null, "CREATE");
+        authorityRepository.save(addAuth);
 
-        Authority read_auth = new Authority(null,"READ");
-        authorityRepository.save(read_auth);
+        Authority readAuth = new Authority(null,"READ");
+        authorityRepository.save(readAuth);
 
-        Authority readAll_auth = new Authority(null, "READ-ALL");
-        authorityRepository.save(readAll_auth);
+        Authority readAllAuth = new Authority(null, "READ-ALL");
+        authorityRepository.save(readAllAuth);
 
-        Authority update_auth = new Authority(null, "UPDATE");
-        authorityRepository.save(update_auth);
+        Authority updateAuth = new Authority(null, "UPDATE");
+        authorityRepository.save(updateAuth);
 
-        Authority delete_auth = new Authority(null, "DELETE");
-        authorityRepository.save(delete_auth);
+        Authority deleteAuth = new Authority(null, "DELETE");
+        authorityRepository.save(deleteAuth);
 
 //       Roles
-        Role default_role = new Role(null, "DEFAULT",Arrays.asList(read_auth));
-        roleRepository.save(default_role);
+        Role defaultRole = new Role(null, "DEFAULT", List.of(readAuth));
+        roleRepository.save(defaultRole);
 
         Role admin_role = new Role(null, "ADMIN", Arrays.asList(read_auth, add_auth, update_auth, delete_auth));
         roleRepository.save(admin_role);
 
+        PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
+      
+      
         //Test User
-        User default_user = new User("james","james.bond@mi6.com","bond", Set.of(default_role));
-        userService.saveUser(default_user);
-        userService.addRoleById(default_user.getId(), default_role.getId());
+        User defaultUser = new User(null, "james","james.bond@mi6.com",passwordEncoder.encode("bond"), Set.of(defaultRole));
+      
+        userService.saveUser(defaultUser);
+        userService.addRoleById(defaultUser.getId(), defaultRole.getId());
 
-        UserProfile testUserProfile = new UserProfile("French Street", "sadadsada.png", null, "Test bio but keep it up so let's gooo", default_user);
+        UserProfile testUserProfile = new UserProfile("French Street", "sadadsada.png", null, "Test bio but keep it up so let's gooo", defaultUser);
         userProfileService.saveUserProfile(testUserProfile);
 
+      
         //Admin
-        User admin_user = new User("boss", "boss.lg@email.com", "bosspw", Set.of(admin_role));
-
+        User adminUser = new User(null, "boss", "boss@email.com", passwordEncoder.encode("bosspw"), Set.of(adminRole));
+      
         userService.saveUser(admin_user);
         userService.addRoleById(admin_user.getId(), admin_role.getId());
 
         UserProfile adminUserProfile = new UserProfile("Boss ave", "boss-baby.png", null, "Who is the boss ?", admin_user);
         userProfileService.saveUserProfile(adminUserProfile);
-
-
-
     }
 }
